# LogiTrack

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  mlflow.db  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  0001_initial_schema.py  0002_add_auth_tables.py  0003_add_reports_log.py  0004_add_blacklist_cleanup_index.py
backend/app/: config.py  database.py  limiter.py  main.py
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/models/: __init__.py  report_log.py  shipment.py
backend/app/routers/: alerts.py  kpi.py  ml.py  reports.py  sellers.py  shipments.py
backend/core/: __init__.py  kpi_engine.py  schemas.py
backend/etl/: __init__.py  clean.py  enrich.py  load.py  run.py
backend/ml/: __init__.py  features.py  predict.py  registry.py  retrain.py  train.py
backend/mlruns/1/1f57a8a1942a4bcab7ef752e0b12644c/artifacts/reports/: feature_importances.json
backend/reports/: __init__.py  report_gen.py
backend/tests/: __init__.py  test_api.py  test_kpis.py  test_predict.py
data/raw/: .gitkeep
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: ENVIRONMENT.md  LINKEDIN_POST.md  PRESENTATION_SCRIPT.md  SHOWCASE.md  TECHNICAL_DEEP_DIVE.md
docs/phase-reports/: .gitkeep  PHASE_01_REPORT.md  PHASE_02_REPORT.md  PHASE_03_REPORT.md  PHASE_04_REPORT.md  PHASE_05_REPORT.md  PHASE_06_REPORT.md  PHASE_07_REPORT.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/__tests__/: smoke.test.ts
frontend/src/api/: alerts.ts  client.ts  kpi.ts  ml.ts  reports.ts  sellers.ts  shipments.ts
frontend/src/hooks/: useAlerts.ts  useKPISummary.ts  useShipments.ts
frontend/src/pages/: AlertsPage.tsx  LoginPage.tsx  OverviewPage.tsx  PredictionPage.tsx  RegionsPage.tsx  (+5 more)
(+20 files in other folders)
