version = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logitrack-backend"
version = "0.1.0"
description = "Logistics KPI dashboard and delay prediction backend."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database — async runtime
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",

    # Database — sync (Alembic + ETL)
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",

    # Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",

    # ETL / data
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "geopy>=2.4.1",

    # Auth
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.1.0",

    # Object storage
    "boto3>=1.34.0",

    # HTTP client
    "httpx>=0.27.0",

    # ML — model training + tracking
    "scikit-learn>=1.4.2",
    "mlflow>=2.13.0",
    "joblib>=1.4.2",
    "apscheduler>=3.10.4",

    # PDF generation (Phase 06)
    "reportlab>=4.1.0",
    "plotly>=5.21.0",
    "kaleido>=0.2.1",
    "pdf2image>=1.17.0",

    # Rate limiting (Phase 07)
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "limits>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "types-passlib",
    "types-python-jose",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "etl", "ml", "core"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "RUF", "BLE"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
